[package]
name = "radioshack-os"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "radioshack-os"

[dependencies]
bevy_crt = { path = "../bevy_crt" }
bevy = {version = "0.17", features = ["webgpu"]}

[profile.dev.package."*"]
opt-level=3

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.13.1", default-features = false, features = ["js"] }
